Migrate source code to Java 21: virtual threads, StandardCharsets, Base64, StringBuilder